# PipelineRL

./: .gitignore  README-hf.md  pyproject.toml
conf/: base.yaml  miniwob.yaml  test.yaml
conf/actor/: web.yaml
conf/finetune/: base.yaml
pipelinerl/: actor.py  async_llm.py  finetune_loop.py  launch.py  llm.py  preprocess.py  state.py  utils.py  vllm1.py
pipelinerl/domains/chartqa/: chartqa.py
pipelinerl/domains/counting/: counting.py  tapeagent.py
pipelinerl/domains/deep_research/: tapeagents_rollouts.py
pipelinerl/domains/guessing/: guessing.py
pipelinerl/domains/math/: rollouts.py
pipelinerl/domains/miniwob/: agent.py  environment.py  environment_server.py  rollouts.py  utils.py
pipelinerl/finetune/: checkpoints.py  logging_.py  lora.py  utils.py  value_model.py
scripts/: run_slurm.sh  run_slurm_4gpu.sh
