[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelinerl"
version = "0.1.0"
description = "A scalable asynchronous reinforcement learning implementation with in-flight weight updates."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "ServiceNow" },
]
dependencies = [
    "aiohttp>=3.9.0",
    "torch>=2.6",
    "vllm==0.8.5.post1",
    "accelerate==1.7.0",
    "deepspeed==0.15.4",
    "browsergym>=0.13.0",
    "datasets>=2.21.0",
    "transformers==4.51.1" ,
    "fastapi>=0.115.0",
    "flash-attn==2.7.3",
    "joblib>=1.3.2",
    "jsonref>=1.1.0",
    "litellm>=1.61.0",
    "numpy>=1.26.0",
    "packaging>=23.0",
    "pandas>=2.2.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.9.0",
    "ring-flash-attn==0.1.6",
    "math-verify[antlr4_9_3]==0.7.0",
    "orjson==3.10.16",
    "requests>=2.31.0",
    "redis==5.2.1",
    "safetensors>=0.4.0",
    "tenacity>=8.2.0",
    "uvicorn>=0.29.0",
    "uvloop>=0.19.0",
    "wandb>=0.16.0",
    "hydra-core>=1.3.2",
]

[project.optional-dependencies]
tapeagents = [
    "Tapeagents[finetune]==0.1.16",
]
lora = [
    "peft==0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelinerl*"]
